# comp214-group-project

./: .dockerignore  .gitignore  Dockerfile  README.md  backend.Dockerfile  docker-compose.yml  env.example  frontend.Dockerfile  package.json  pyproject.toml
db/: Dockerfile  custom-entrypoint.sh  postgresql.conf
db/scripts/: 001-account.sql  002-hr-schema.sql  003-hr-data.sql  004-hire-procedure.sql  005-job-procedure.sql  006-check-salary.sql  007-job-description.sql
src/backend/: app.py  auth.py  dependencies.py  lifespan.py  middleware.py
src/backend/routes/: auth.py
