[build-system]
requires = ["uv-build~=0.9.8"]
build-backend = "uv_build"

[project]
name = "backend"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.14"
# license = "MIT"
# license-files = ["LICENSE"]
authors = []
classifiers = [
    "Private :: Do Not Upload",
    "Typing :: Typed",
]
dependencies = [
    "asyncpg>=0.30.0",
]
