[build-system]
requires = ["uv-build~=0.9.8"]
build-backend = "uv_build"

[project]
name = "backend"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.14"
# license = "MIT"
# license-files = ["LICENSE"]
authors = []
classifiers = [
    "Private :: Do Not Upload",
    "Typing :: Typed",
]
dependencies = [
    "asyncpg==0.30.0",
    "asyncpg-stubs==0.30.2",
    "fastapi==0.121.1",
    "uvicorn[standard]==0.38.0",
]
